#15 removed invalid report paths

--- a/pom.xml
+++ b/pom.xml
@@ -47,10 +47,7 @@
 
         <!-- sonar variables -->
         <jacoco.plugin.version>0.8.4</jacoco.plugin.version>
-        <project.jacoco.ut.reportPath>${user.dir}/target/jacoco.exec</project.jacoco.ut.reportPath>
-        <project.jacoco.it.reportPath>${user.dir}/target/jacoco-it.exec</project.jacoco.it.reportPath>
-        <sonar.jacoco.reportPaths>${project.jacoco.ut.reportPath},${project.jacoco.it.reportPath}
-        </sonar.jacoco.reportPaths>
+	<sonar-jacoco-listeners.version>5.14.0.18788</sonar-jacoco-listeners.version>
         <sonar.java.libraries>${project.build.directory}/dependency</sonar.java.libraries>
     </properties>
 
@@ -400,7 +397,7 @@
                 <dependency>
                     <groupId>org.sonarsource.java</groupId>
                     <artifactId>sonar-jacoco-listeners</artifactId>
-                    <version>5.14.0.18788</version>
+                    <version>${sonar-jacoco-listeners.version}</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
